fix fkn bug on mobile devices with scrolling padding over the toolbox

--- a/css/interior.css
+++ b/css/interior.css
@@ -4,31 +4,25 @@
     box-sizing: border-box;
     font-family: "Poppins", sans-serif;
 }
-body, html {
-    height: 100vh;
-    width: 100%;
+
+body {
+  min-height: 100vh;
+  min-height: -webkit-fill-available;
+}
+html {
+  height: -webkit-fill-available;
 }
 
-#navbar {
-    background-color:rgb(182, 160, 145);
-    position: fixed;
-    top: 0;
-    width: 100%;
 
-    transition: top 0.3s;
+nav {
+    position: fixed;
     display: flex;
     justify-content: space-around;
     align-items: center;
     min-height: 60px;
+    background-color:rgb(255, 255, 255);
+    width: 100%;
     z-index: 1;
-  }
-
-nav {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    min-height: 8vh;
-    background-color:rgb(182, 160, 145);
 }
 
 .logo a {
@@ -51,7 +45,7 @@ nav {
 }
 
 .nav-links a {
-    color: rgb(255, 255, 255);
+    color: rgb(0, 0, 0);
     text-decoration: none;
     letter-spacing: 3px;
     font-weight: bold;
@@ -66,7 +60,7 @@ nav {
 .burger div {
     width: 25px;
     height: 3px;
-    background-color: rgb(255, 255, 255);
+    background-color: rgb(0, 0, 0);
     margin: 5px;
     transition: all 0.3s ease;
 }
@@ -98,7 +92,7 @@ nav {
         left: 0px;
         height: 70vh;
         top: 6vh;
-        background-color: rgb(182, 160, 145);
+        background-color: rgb(255, 255, 255);
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -264,7 +258,7 @@ animation-delay:0s;
   }
   
 .welcome-text{
-    height: 100vh;
+    height: 100%;
 }
 
 .main-title {
@@ -289,7 +283,7 @@ animation-delay:0s;
 }
 
 .first-interior, .second-interior{
-    height: 100vh;
+    height: 100%;
     position: relative;
 }
 
@@ -391,13 +385,6 @@ animation-delay:0s;
   transform: translate(-50%, -50%);
   text-align: center;
 }   
-
-.first-interior .btm-footer{
-    position: absolute;
-    left: 49.5%;
-    top: 96.5%;
-    transform: translate(-50%, -50%);
-}
 
 
 @media screen and (max-width: 1600px){
@@ -589,7 +576,7 @@ animation-delay:0s;
         transition: all 0.3s ease-out;
         cursor: pointer;
         position: absolute;
-        transform: translate(-15vw, -50%);
+        transform: translate(-14vw, -130%);
         top: 83vh;
         box-shadow: 8px 8px 20px rgba(214, 200, 200, 0.37);
         width: 120px;
@@ -597,7 +584,7 @@ animation-delay:0s;
     
     .left-gallery, .right-gallery {
         display: grid;
-        grid-template-columns: repeat(auto-fill, minmax(100px, 3fr));
+        grid-template-columns: repeat(auto-fill, minmax(70px, 3fr));
         align-items:center;
         justify-items: center;
         margin-bottom: 2rem;
@@ -658,7 +645,7 @@ animation-delay:0s;
     }
 
     .img-container2 img{
-        transform: translate(40vw, -110%);
+        transform: translate(42vw, -110%);
         top: 90vh;
         width: 100px;
     }
